--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,17 +72,15 @@
 }
 
 .grid {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
   max-width: 800px;
-  margin-top: 3rem;
 }
 
 .card {
   margin: 1rem;
-  flex-basis: 45%;
+  width: 100%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -119,4 +117,14 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.tradeDiv {
+  display: flex;
+  justify-content: space-around;
+}
+
+.tradeDiv span {
+  font-size: 13px;
+  color: rgb(77, 77, 77);
 }
