--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -126,6 +126,15 @@
 
 .tradeDiv span {
   font-size: 13px;
-  color: rgb(77, 77, 77);
+  color: rgb(124, 124, 124);
   font-weight: bold;
+}
+
+.player {
+  margin-left: 30px;
+  font-size: 15px;
+}
+
+p.playerName {
+  margin: 0.25rem 0;
 }
