--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -69,6 +69,7 @@
   font-size: 13px;
   color: rgb(124, 124, 124);
   font-weight: bold;
+  display: block;
 }
 
 .player {
@@ -76,7 +77,7 @@
   font-size: 14px;
 }
 
-p.playerName {
+a.playerName {
   margin: 0.25rem 0;
 }
 
