--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -81,6 +81,10 @@ a.playerName {
   display: block;
 }
 
+a.playerName:hover {
+  text-decoration: underline;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
